# llm-inference-latency-sensitivity-analysis

./: .gitignore  LATENCY_SENSITIVITY_ANALYSIS_ON_RTX_5070.md  README.md  pyproject.toml
.angreal/: angreal.toml  task_lint.py  task_tests.py
posts/: post1.md
results/sweeps/: qwen25_3b_fp16_grid_fixed_batch.csv  qwen25_3b_fp16_grid_fixed_seq.csv
src/llm_inference_latency_sensitivity_analysis.egg_info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/llm_latency_anatomy/: __init__.py  __main__.py  collapse.py  metrics.py  nvtx.py  phases.py  sweep.py
src/llm_latency_anatomy/nsys/: __init__.py  profiles.py
src/utils/: gpu_info.py
